# ROS_AutoTaxi

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/prius_msgs/: Control.h
devel/lib/pkgconfig/: prius_description.pc  prius_msgs.pc  self_driving_car.pc  simulator_resources.pc
devel/share/prius_description/cmake/: prius_descriptionConfig.cmake
devel/share/prius_msgs/cmake/: prius_msgs-msg-extras.cmake  prius_msgs-msg-paths.cmake  prius_msgsConfig.cmake
devel/share/roseus/ros/prius_msgs/: manifest.l
devel/share/self_driving_car/cmake/: self_driving_carConfig.cmake
devel/share/simulator_resources/cmake/: simulator_resourcesConfig.cmake
src/prius_description/rviz/: demo.rviz
src/prius_description/urdf/: prius.urdf
src/self_driving_car/: CMakeLists.txt  package.xml
src/self_driving_car/launch/: gazebo.launch  rviz.launch  spawn.launch
src/self_driving_car/scripts/: lane_detection.py
src/self_driving_car/src/: keyControl.cpp  lane_follow.py  main.cpp
src/simulator_resources/: CMakeLists.txt  package.xml
src/simulator_resources/worlds/: maze_solving.world
